# RSNA2025-3rd-place-solution

./: .gitignore  README.md  pyproject.toml  run_train.sh  run_train_classification_roi.py  run_train_spacing.py
notebooks/prepare_dataset/: rsna2025-annotate-vessel-bbox.ipynb  rsna2025-eda-plus3d.ipynb  rsna2025-series-dataset-yolo-vessel-region-plus-3d.ipynb
notebooks/roi_extraction/: rsna2025-inference-yolo-vessel-region-detection-v3.ipynb  rsna2025-reconstruct-3d-roi.ipynb
scripts/: add_intensity_feature.py  save_npy.py
src/classification/: datasets.py  layers.py  losses.py  models.py  trainer.py  utils.py
src/classification/config/: config_roi_model1.py  config_roi_model10.py  config_roi_model11.py  config_roi_model2.py  config_roi_model3.py  config_roi_model4.py  config_roi_model5.py  config_roi_model6.py  config_roi_model7.py  config_roi_model8.py  config_roi_model9.py
src/spacing/: __init__.py  config.py  datasets.py  model.py  trainer.py  utils.py
